update url handlers to use Java Desktop approach